--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "bamby-comments",
   "version": "1.0.0",
+  "description": "BAMBY粉丝站评论系统",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["bamby", "comments", "plave"],
+  "keywords": ["bamby", "comments", "plave", "蔡丰玖"],
   "author": "BAMBY Fans",
   "license": "MIT",
   "dependencies": {
@@ -16,6 +17,6 @@
     "cors": "^2.8.5"
   },
   "engines": {
-    "node": "18.x"
+    "node": "20.x"
   }
 }
