--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
   "name": "bamby-comments",
   "version": "1.0.0",
-  "description": "BAMBY粉丝站评论系统",
-  "main": "server.js",
+  "description": "GitHub Pages评论系统",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vercel dev"
   },
-  "keywords": ["bamby", "comments", "plave", "蔡丰玖"],
-  "author": "BAMBY Fans",
-  "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.5.0",
-    "cors": "^2.8.5"
+    "mongodb": "^6.21.0"
+  },
+  "devDependencies": {
+    "vercel": "^28.0.0"
   },
   "engines": {
-    "node": "20.x"
+    "node": ">=18.x"
   }
 }
