--- a/package.json
+++ b/package.json
@@ -1,16 +1,12 @@
 {
   "name": "bamby-comments",
   "version": "1.0.0",
-  "description": "GitHub Pages评论系统",
-  "main": "index.js",
+  "main": "api/index.js",
   "scripts": {
-    "dev": "vercel dev"
+    "build": "echo 'No build step needed'"
   },
   "dependencies": {
-    "mongodb": "^6.21.0"
-  },
-  "devDependencies": {
-    "vercel": "^28.0.0"
+    "mongodb": "^6.0.0"
   },
   "engines": {
     "node": ">=18.x"
