--- a/vercel.json
+++ b/vercel.json
@@ -4,17 +4,8 @@
       "maxDuration": 10
     }
   },
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/public/$1",
-      "headers": {
-        "Cache-Control": "public, max-age=3600, s-maxage=3600"
-      }
-    }
+  "rewrites": [
+    { "source": "/api/(.*)", "dest": "/api/$1" },
+    { "source": "/(.*)", "dest": "/public/$1" }
   ]
 }
