--- a/package.json
+++ b/package.json
@@ -1,13 +1,7 @@
 {
   "name": "bamby-comments",
   "version": "1.0.0",
-  "main": "api/index.js",
-  "scripts": {
-    "build": "echo 'No build step needed'"
-  },
-  "dependencies": {
-    "mongodb": "^6.0.0"
-  },
+  "dependencies": {},
   "engines": {
     "node": ">=18.x"
   }
